# so-automation

./: .gitignore  Logger.py  MacroRunner.py  README.md  SAPDispatchReport.py  SAPUtils.py  automation_logic.py  config.json  config.py  main.py  pyproject.toml  run_excel_macro.py  sotool_example.json  test.vbs  utils.py
kohls/: Kohls.py  pdf_processor_kohls.py
src/sotool/: __init__.py  app.py  config.py  gui.py  logger.py  run.py  run_automation.py  utils.py
src/sotool/MacroGenerator/: __init__.py
src/sotool/automations/: sap_dispatch_report.py
src/sotool/automations/kohls/: kohls_automation.py  kohls_towel.py
src/sotool/dialog/: __init__.py
src/sotool/integrations/: __init__.py  excel.py  outook.py  pdf_parser.py  sap_connector.py
src/sotool/kohls/: KohlsMacroGenerator.py  __init__.py  kohls_macro_generator.py  kohls_rugs.py  kohls_towel.py  pdf_processor.py
src/sotool/macro/: MacroGenerator.py  MacroRunner.py  __init__.py  macro_generator.py  macro_runner.py
src/sotool/sap/: SAPDispatchReport.py  __init__.py  sap_dispatch_report.py
src/sotool/ui/: main_window.py
src/sotool/utils/: ExcelUtils.py  OutlookClient.py  OutlookClientWin32.py  SAPUtils.py  __init__.py  excel_client.py  excel_utils.py  outlook_client.py  outlook_client_win32.py  sap_utils.py
src/sotool/vbscripts/: towel_macro.vbs
src/sotool/workflows/: sap_dispatch_report.py
src/sotool/workflows/kohls/: __init__.py  check_po_so.py  (+5 more)
tests/: test_excel.py  test_outlook.py
tests/files/: test_dispatch_report.xlsx  test_macro.xlsm
tests/integrations/: test_excel.py  test_outlook.py  test_sap.py
vbscripts/: rugs_macro.vbs  towel_macro.vbs
