[project]
name = "so-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "nicegui>=2.18.0",
    "openpyxl>=3.1.5",
    "pandas[excel]>=2.2.3",
    "pdfplumber==0.11.5",
    "pywebview>=5.4",
    "pywin32>=310",
    "pywinauto>=0.6.9",
]

[tool.ruff]
indent-width = 4

