[project]
name = "sotool"
version = "0.1.0"
description = "SO automation tools and scripts"
readme = "README.md"
authors = [
    { name = "Ajay Kanki", email = "48607132+fnxL@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pandas[excel]>=2.2.3",
    "pdfplumber==0.11.5",
    "pyinstaller>=6.13.0",
    "pywin32>=310",
    "pywinauto>=0.6.9",
    "ttkbootstrap>=1.13.8",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock", # Crucial for mocking external systems
]

[project.scripts]
sotool = "sotool:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
indent-width = 4

